RESOLVED FIXED228966
[BigSur] TestWebKitAPI.AudioRoutingArbitration.Updating fails after r280726
https://bugs.webkit.org/show_bug.cgi?id=228966
Summary [BigSur] TestWebKitAPI.AudioRoutingArbitration.Updating fails after r280726
Peng Liu
Reported 2021-08-10 12:33:23 PDT
TestWebKitAPI.AudioRoutingArbitration.Updating History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.AudioRoutingArbitration.Updating /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/AudioRoutingArbitration.mm:152 Expected: (arbitrationUpdateTime) < ([webView _audioRoutingArbitrationUpdateTime]), actual: 1.62861e+09 vs 1.62861e+09 Arbitration was not updated
Attachments
[fast-cq] Patch (7.22 KB, patch)
2021-08-11 12:01 PDT, Peng Liu
no flags
Radar WebKit Bug Importer
Comment 1 2021-08-10 12:40:16 PDT
Peng Liu
Comment 2 2021-08-11 12:01:00 PDT
Created attachment 435366 [details] [fast-cq] Patch
EWS
Comment 3 2021-08-11 15:54:19 PDT
Committed r280936 (240453@main): <https://commits.webkit.org/240453@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435366 [details].
Note You need to log in before you can comment on or make changes to this bug.