Source/WebKit/GPUProcess/media/RemoteAudioSessionProxy.cpp
@@ -73,11 +73,12 @@ RemoteAudioSessionConfiguration RemoteAudioSessionProxy::configuration()
 
 void RemoteAudioSessionProxy::setCategory(AudioSession::CategoryType category, RouteSharingPolicy policy)
 {
-    if (m_category == category && m_routeSharingPolicy == policy)
+    if (m_category == category && m_routeSharingPolicy == policy && !m_isPlayingToBluetoothOverrideChanged)
         return;
 
     m_category = category;
     m_routeSharingPolicy = policy;
+    m_isPlayingToBluetoothOverrideChanged = false;
     audioSessionManager().updateCategory();
 }
 
@@ -91,6 +92,12 @@ void RemoteAudioSessionProxy::tryToSetActive(bool active, SetActiveCompletion&& 
 {
     m_active = audioSessionManager().tryToSetActiveForProcess(*this, active);
     completion(m_active);
+}
+
+void RemoteAudioSessionProxy::setIsPlayingToBluetoothOverride(std::optional<bool>&& value)
+{
+    m_isPlayingToBluetoothOverrideChanged = true;
+    audioSessionManager().session().setIsPlayingToBluetoothOverride(WTFMove(value));
 }
 
 void RemoteAudioSessionProxy::configurationChanged()
