Source/WebKit/WebProcess/GPU/media/RemoteAudioSession.h
@@ -71,6 +71,10 @@ private:
     void addConfigurationChangeObserver(ConfigurationChangeObserver&);
     void removeConfigurationChangeObserver(ConfigurationChangeObserver&);
 
+#if ENABLE(ROUTING_ARBITRATION)
+    void setIsPlayingToBluetoothOverride(std::optional<bool>) final;
+#endif
+
     const RemoteAudioSessionConfiguration& configuration() const;
     RemoteAudioSessionConfiguration& configuration();
     void initializeConfigurationIfNecessary();
@@ -91,6 +95,7 @@ private:
     WeakHashSet<ConfigurationChangeObserver> m_configurationChangeObservers;
     CategoryType m_category { CategoryType::None };
     WebCore::RouteSharingPolicy m_routeSharingPolicy { WebCore::RouteSharingPolicy::Default };
+    bool m_isPlayingToBluetoothOverrideChanged { false };
     std::optional<RemoteAudioSessionConfiguration> m_configuration;
     WeakPtr<GPUProcessConnection> m_gpuProcessConnection;
 };
